--- a/fun.css
+++ b/fun.css
@@ -1,17 +1,17 @@
 h1 {
     color: white;
-    background-color: lightblue;
+    background-color: rgb(230, 158, 99);
     margin-left: 20px;
     font-weight: bold;
-    width: 100px;
+    width: 150px;
     height: 100px;
     border-radius: 25px;
     padding: 20px;
     font-family:Arial, Helvetica, sans-serif;
-    transition: width 2s, height 2s;
+    transition: width 1s, height 1.2s;
   }
 
 h1:hover {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 30px;
 }
