--- a/fun.css
+++ b/fun.css
@@ -8,10 +8,12 @@ h1 {
     border-radius: 25px;
     padding: 20px;
     font-family:Arial, Helvetica, sans-serif;
-    transition: width 1s, height 1.2s;
+    transition: width 1s, height 1s, font-size 1s, background-color 1s;
   }
 
 h1:hover {
-  width: 400px;
-  height: 30px;
+  width: 300px;
+  height: 200px;
+  font-size: 63px;
+  background-color: lightblue;
 }
