--- a/fun.css
+++ b/fun.css
@@ -1,4 +1,4 @@
-h1 {
+.test {
     color: white;
     background-color: rgb(253, 157, 78);
     margin-left: 20px;
@@ -8,10 +8,30 @@ h1 {
     border-radius: 25px;
     padding: 20px;
     font-family:Arial, Helvetica, sans-serif;
+    float:left;
     transition: width 1s, height 1s, font-size 1s, background-color 1s;
   }
 
-h1:hover {
+
+.test2 {
+  transition: opacity 1s;
+  color: white;
+  background-color: rgb(253, 157, 78);
+  font-weight: bold;
+  margin-left: 20px;
+  width: 150px;
+  height: 100px;
+  border-radius: 25px;
+  padding: 20px;
+  float:right;
+  font-family:Arial, Helvetica, sans-serif;
+  transition: opacity 1s;
+}
+.test2:hover {
+  opacity: 0;
+}
+
+.test:hover {
   width: 300px;
   height: 200px;
   font-size: 63px;
