--- a/fun.css
+++ b/fun.css
@@ -1,4 +1,4 @@
-.test {
+.expand {
     color: white;
     background-color: rgb(253, 157, 78);
     margin-left: 20px;
@@ -13,7 +13,7 @@
   }
 
 
-.test2 {
+.fade {
   transition: opacity 1s;
   color: white;
   background-color: rgb(253, 157, 78);
@@ -27,11 +27,11 @@
   font-family:Arial, Helvetica, sans-serif;
   transition: opacity 1s;
 }
-.test2:hover {
+.fade:hover {
   opacity: 0;
 }
 
-.test:hover {
+.expand:hover {
   width: 300px;
   height: 200px;
   font-size: 63px;
