--- a/sitestyle.css
+++ b/sitestyle.css
@@ -4,35 +4,73 @@
     font-family: "whitrabt";
     src: url(font/whitrabt.ttf) format("truetype");
 }
-@keyframes example {
+@keyframes default {
     from{visibility: initial;}
     to {visibility: hidden;}
 }
+@keyframes type {
+    from {width: 0}
+    to {width: 100%}
+}
 .cursor {
-    background-color:rgb(32, 194, 14);
-    width: 9px;
-    height: 3px;
-    animation: example 1s infinite steps(2, start);
+    background-color:lightgray;
+    width: 18px;
+    height: 6px;
+    animation: default 1s infinite steps(2, start);
     margin-left: 3px;
     display: inline-block;
 }
 .test {
     font-size: 14px;
-    color: rgb(32, 194, 14);
+    color: lightgray;
 }
 h1 {
+    overflow: hidden;
     text-align:center;
-    color: rgb(32, 194, 14);
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .1em;
+    color: lightgray;
     padding: 20px;
-    font-size: 20px;
+    font-size: 50px;
     font-family: 'Consolas';
+    animation: type 4s steps(40, end);
 }
 body{
-    background-color: black;
+    background-color: rgb(0,0,128);
 }
 
 a {
-    font-size: 14px;
-    color: rgb(32, 194, 14);
-    text-decoration: underline;
+    padding: 5px;
+    font-size: 20px;
+    font-family: 'Consolas';
+    color: lightgray;
+}
+
+h2 {
+    display: inline-block;
+    margin-left: 5px;
+    color:lightgray;
+    font-family: 'Consolas';
+}
+
+.horizontal{
+    background-color: lightgray;
+    width: 100%;
+    height: 3px;
+}
+
+.vertical{
+    background-color: lightgray;
+    position: absolute;
+    height: 100%;
+    width: 3px;
+    margin-left: 70%;
+}
+
+.rightText{
+    padding: 30px;
+    font-size: 20px;
+    color: lightgray;
+
 }
