--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,13 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
-    <a class ='no-decor'href=""> <h1 class="display-5 no-decor text-dark ml-1" href='#'>Caeleb Koharjo</h1></a>
+    <a class ='no-decor'href="/"> <h1 class="display-5 no-decor text-dark ml-1" href='#'>Caeleb Koharjo</h1></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-            <a class="nav-link mr-4" href="#">About me</a>
+            <a class="nav-link mr-4" href="/about">About me</a>
             </li>
             <li class="nav-item">
             <a class="nav-link mr-4" href="#">Personal Projects</a>
