added a new section to home page, and made the background image have a parallax effect.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,4 +10,10 @@
     background-image: url("/resources/imgs/lake.jpg");
     background-size: cover;
     background-position: center 15%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+#info{
+    height:30em;
 }
