--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 
 <%-include('partials/head')%>
-
+<title>Caeleb Koharjo</title>
 
 <body>
     <%-include('partials/navbar')%>
@@ -9,7 +9,16 @@
             <h1 class="display-3 text-light">Hey! I'm Caeleb,</h1>
             <h1 class='display-5 text-light'>a Computer Science Major at the University of British Columbia.</h1>
         </div>
-        <footer class="blockquote-footer ml-auto mt-auto pr-2 bg-dark text-light">Image by Sebastian Del Val <cite title="Source Title">from Pixabay</cite></footer>
+        <a target='_blank' class='no-decor ml-auto mt-auto pr-2' href="https://pixabay.com/users/sebadelval-18044/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=5173683">
+            <footer class="blockquote-footer bg-dark text-light">Image by Sebastian Del Val <cite title="Source Title">from Pixabay</cite></footer>
+        </a>
+    </section>
+
+    <section id='info' class='bg-dark'>
+        <h1 class="text-center display-5 pt-2 text-light"></h1>
+        <div class="container">
+
+        </div>
     </section>
 </body>
 </html>
