--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,10 +15,39 @@
     </section>
 
     <section id='info' class='bg-dark'>
-        <h1 class="text-center display-5 pt-2 text-light"></h1>
-        <div class="container">
-
+        <div id='toolbar' class="container-fluid">
+            <div class="d-flex flex-row-reverse">
+                <div class="px-2 bg-danger mx-2">x</div>
+                <div class="px-2 bg-warning mx-2 ">-</div>
+                <div class="px-2 bg-success mx-2 ">+</div>
+                <div class="mr-auto text-dark"> Brief Introduction: </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <p id='typetext1' class='lead pt-2'><span class='cursor'></span></p>
+                    <p id= 'typetext1A' class='lead highlight'></p>
+                    <p id='typetext2' class='lead'></p>
+                    <p id= 'typetext2A' class='lead highlight'></p>
+                    <p id='typetext3' class='lead'></p>
+                    <p id= 'typetext3A' class='lead highlight'></p>
+                    <p id='typetext4' class='lead'></p>
+                    <p id= 'typetext4A' class='lead highlight'></p>
+                    <p id='typetext5' class='lead'></p>
+                    <p id= 'typetext5A' class='lead highlight'></p>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-4">
+                    <img src="/resources/imgs/profile.jpeg" class='profile mt-4' width='400em' height='400em' alt="profile picture">
+                </div>
+                <div class="col-1"></div>
+            </div>
         </div>
     </section>
+    <section>
+
+    </section>
+    <script src="/js/animatetype.js"></script>
 </body>
 </html>
