--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,8 @@
     margin-left: 8px;
 }
 
-#toolbar {
+.toolbar {
+    font-family: 'Anonymous Pro', monospace; 
     width:100%;
     height:1.5em;
     background-color:silver;
@@ -43,16 +44,57 @@
 
 .profile {
     opacity:0;
+}
+
+#profile {
     border-radius:100px;
     border: 2px solid white;
+    transition: 0.5s;
+}
+
+#profile:hover {
+    box-shadow: 0 0 15px #ffee10;  
 }
 
 .fadein {
-    animation: fade 2s ease-in;
+    animation: fadeinward 1.5s ease-in;
     animation-fill-mode: forwards;
 }
 
-@keyframes fade{
+@keyframes fadeinward{
     from {opacity: 0}
     to {opacity : 1}
+}
+
+.fadeout {
+    animation: fadeoutward 1s ease-in;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeoutward{
+    from {opacity: 1}
+    to {opacity : 0}
+}
+
+.carousel-section{
+    padding-top:8%;
+    width:100%;
+    height:30em;
+    background-color:rgba(101,147,245,1);
+}
+
+.carousel-indicators:hover{
+    cursor: pointer;
+}
+
+#footer{
+    height:25em;
+}
+
+.svg-card{
+    vertical-align:middle;
+}
+
+.white-border{
+    border-color:white;
 }
