updated to center the image caption

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,9 +45,11 @@
                 </div>
                 <div class="col-1"></div>
                 <div class="col-4">
-                    <a href="#" class='no-decor text-light'>
-                        <img src="/resources/imgs/profile.jpeg" id='profile' class='profile mt-4' width='400em' height='400em' alt="profile picture">
-                        <p class='text-center lead mt-1 mr-5 profile'>Press to Learn More!</p>
+                    <a href="/about" class='no-decor text-light'>
+                        <figure>
+                            <img src="/resources/imgs/profile.jpeg" id='profile' class='profile mt-4' width='400em' height='400em' alt="profile picture">
+                            <figcaption class='text-center lead mt-2 mr-5 profile'>Press to learn more!</figcaption>
+                        </figure>
                     </a>
                 </div>
                 <div class="col-1"></div>
