--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
     <section id='info' class='bg-dark'>
         <div class="toolbar container-fluid">
-            <div class="d-flex flex-row-reverse">
+            <div class="d-flex flex-row-reverse" style='overflow:hidden;'>
                 <div class="px-2 bg-danger mx-2">x</div>
                 <div class="px-2 bg-warning mx-2 ">-</div>
                 <div class="px-2 bg-success mx-2 ">+</div>
@@ -31,7 +31,7 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 text-clean">
                     <p id='typetext1' class='lead pt-2'><span class='cursor'></span></p>
                     <p id= 'typetext1A' class='lead highlight'></p>
                     <p id='typetext2' class='lead'></p>
@@ -47,7 +47,7 @@
                 <div class="col-4">
                     <a href="/about" class='no-decor text-light'>
                         <figure>
-                            <img src="/resources/imgs/profile.jpeg" id='profile' class='profile mt-4' width='400em' height='400em' alt="profile picture">
+                            <img src="/resources/imgs/profile.jpeg" id='profile' class='profile img-thumbnail mt-4' width='400em' height='400em' alt="profile picture">
                             <figcaption class='text-center lead mt-2 mr-5 profile'>Press to learn more!</figcaption>
                         </figure>
                     </a>
@@ -120,114 +120,7 @@
               </a>
           </div>
     </section>
-
-    <section id='footer' class='bg-light'>
-        <div class="container-fluid toolbar mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="pt-1 bi bi-person-lines-fill" viewBox="0 0 16 16">
-                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
-            </svg>
-            Extra Information:
-        </div>
-        <div class="container-fluid" id='cards'>
-            <div class="row">
-                <div class="col d-flex flex-column align-items-center">
-                    <div class="card mt-5 ml-2" style="width: 18rem;">
-                        <div class="card-body bg-dark text-light">
-                            <h5 class="card-title">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
-                            </svg>  
-                            Caeleb Koharjo</h5>
-                            <hr class='bg-white'>
-                            <p class="card-text">Computer Science Major at University of British Columbia</p>
-                        </div>
-                        <div class="list-group list-group-flush">
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "mailto: caelebkoharjo@gmail.com">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-envelope" viewBox="0 0 16 16">
-                                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
-                                </svg>
-                                Email
-                            </a>
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "https://github.com/caelebk">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-github" viewBox="0 0 16 16">
-                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                                </svg>
-                                GitHub
-                            </a>
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href="https://www.linkedin.com/in/caeleb-koharjo-709174190/">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-linkedin" viewBox="0 0 16 16">
-                                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                                </svg>
-                                LinkedIn
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col d-flex flex-column align-items-center">
-                    <div class="card mt-5 ml-2 bg-dark text-light" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-reply" viewBox="0 0 16 16">
-                                    <path d="M6.598 5.013a.144.144 0 0 1 .202.134V6.3a.5.5 0 0 0 .5.5c.667 0 2.013.005 3.3.822.984.624 1.99 1.76 2.595 3.876-1.02-.983-2.185-1.516-3.205-1.799a8.74 8.74 0 0 0-1.921-.306 7.404 7.404 0 0 0-.798.008h-.013l-.005.001h-.001L7.3 9.9l-.05-.498a.5.5 0 0 0-.45.498v1.153c0 .108-.11.176-.202.134L2.614 8.254a.503.503 0 0 0-.042-.028.147.147 0 0 1 0-.252.499.499 0 0 0 .042-.028l3.984-2.933zM7.8 10.386c.068 0 .143.003.223.006.434.02 1.034.086 1.7.271 1.326.368 2.896 1.202 3.94 3.08a.5.5 0 0 0 .933-.305c-.464-3.71-1.886-5.662-3.46-6.66-1.245-.79-2.527-.942-3.336-.971v-.66a1.144 1.144 0 0 0-1.767-.96l-3.994 2.94a1.147 1.147 0 0 0 0 1.946l3.994 2.94a1.144 1.144 0 0 0 1.767-.96v-.667z"/>
-                                </svg>    
-                                Feedback:
-                            </h5>
-                            <hr class='bg-white'>
-                            <p class="card-text">Feel free to leave any feedback down below!</p>
-                        </div>
-                        <div class="card bg-dark" style='border-top-color:white'>
-                            <div class="card-body ">
-                                <form action="">
-                                    <textarea id="subject" name="subject" placeholder="Write feedback here." style="height:4em; width:15em;"></textarea>   
-                                    <div class="text-center">
-                                        <button class="btn btn-primary mb-0">Submit</button>
-                                    </div> 
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col d-flex flex-column align-items-center">
-                    <div class="card mt-5 ml-2 bg-dark text-light" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="svg-card pb-1 bi bi-link" viewBox="0 0 16 16">
-                                    <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
-                                    <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
-                                </svg>
-                                Quick Links:
-                            </h5>
-                            <hr class='bg-white'>
-                            <p class="card-text"> Check out the other pages if you haven't visited already! </p>
-                        </div>
-                        <div class="list-group list-group-flush">
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "mailto: caelebkoharjo@gmail.com">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-person-circle" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                                </svg>
-                                About Me
-                            </a>
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "https://github.com/caelebk">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-file-earmark-person" viewBox="0 0 16 16">
-                                    <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                                    <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z"/>
-                                </svg>
-                                Personal Projects
-                            </a>
-                            <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href="https://www.linkedin.com/in/caeleb-koharjo-709174190/">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"class="svg-card bi bi-person-lines-fill" viewBox="0 0 16 16">
-                                    <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
-                                </svg>
-                                Contact Information
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <%- include('partials/footer')%>
     <script src="/js/animatetype.js"></script>
-    <script src="/js/fadescroll.js"></script>
 </body>
 </html>
