--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,5 +3,36 @@
 
 <body>
     <%-include('partials/navbar')%>
-    <h1>Hello World!</h1>
+    <section>
+        <div class="container-fluid toolbar mb-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="pt-1 bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+                <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.498 4.498 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.498 3.498 0 0 1 8 11.5a3.498 3.498 0 0 1-3.032-1.75zM7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A2.99 2.99 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.22 4.22 0 0 0 8 5c-.35 0-.69.04-1 .116z"/>
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0z"/>
+            </svg>
+            About Me:
+        </div>
+        <div class="container-fluid bg-dark text-light" id='aboutme'>
+            <div class="row">
+                <div class="col-6 mt-5">
+                    <h1 class="ml-2 display-3 ">
+                        Hey I'm Caeleb, <span class="ml-5"> :) </span>
+                    </h1>
+                    <h1 class="ml-2 display-4 ">an aspiring sofware engineer.</h1>
+                    <hr class='bg-light'>
+                    <p class='lead ml-1 mt-5'> Welcome to my portfolio! As you know from the title, I'm Caeleb! A current junior (3rd year) undergraduate student at the University of British Columbia studying
+                        computer science. I have a complicated background, but to sum it up: I was born in Hong Kong, grew up in Singapore, and am studying in Vancouver. My interests 
+                    </p>
+                </div>
+                <div class="col-6 mt-5">
+                    <div class="text-center">
+                        <img src="/resources/imgs/profile.jpeg" alt="picture of me" height='400em' width='400em' id='me'>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <%-include('partials/footer')%>
 </body>
