--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/aboutme.css">
     <link rel="shortcut icon" href="/resources/imgs/icon.png" type="image/x-icon">
     <script src="/js/jquery-3.0.0.slim.js"></script>
     <script src="/js/popper.min.js"></script>
