--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,10 +45,10 @@
                 </div>
                 <div class="col-1"></div>
                 <div class="col-4">
-                    <a href="/about" class='no-decor text-light'>
+                    <a href="/about" class='no-decor text-light' style='cursor: default;'>
                         <figure>
                             <img src="/resources/imgs/profile.jpeg" id='profile' class='profile img-thumbnail mt-4' width='400em' height='400em' alt="profile picture">
-                            <figcaption class='text-center lead mt-2 mr-5 profile'>Press to learn more!</figcaption>
+                            <figcaption class='figure-caption profile text-left text-light'>Press to learn more!</figcaption>
                         </figure>
                     </a>
                 </div>
@@ -76,8 +76,9 @@
                             <img src="/resources/imgs/discord-logo.png" width='100em' height='100em' alt="discord-logo">
                         </div>
                         <h1 class='display-5 text-light pt-2 text-center'>Discord Bot</h1>
-                        <p class="lead text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi rerum perspiciatis obcaecati nam vero reprehenderit ipsum illum ipsa impedit consectetur sequi quisquam provident nemo, explicabo incidunt adipisci voluptate facilis sapiente.
-
+                        <p class="lead text-light text-center">
+                            This multi-functional discord bot was written using Javascript and runs on Nodejs. Currently, it's deployed on an
+                            AWS EC2 Server and is running 24/7 on a couple discord chat servers.
                         </p>
                     </div>
                 </div>
@@ -90,8 +91,8 @@
                             </svg>
                         </div>
                         <h1 class='display-5 text-light pt-2 text-center'>Polynomial Calculator</h1>
-                        <p class="lead text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi rerum perspiciatis obcaecati nam vero reprehenderit ipsum illum ipsa impedit consectetur sequi quisquam provident nemo, explicabo incidunt adipisci voluptate facilis sapiente.
-
+                        <p class="lead text-light text-center">
+                            This calculator is implemented using Java and JPanel for the user interface. It uses various data structures and algorithms to manipulate polynomials using calculus, while also following many software design principles.
                         </p>
                     </div>
                 </div>
@@ -103,9 +104,10 @@
                                 <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm13 2v2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1zM2 14a1 1 0 0 1-1-1V6h14v7a1 1 0 0 1-1 1H2z"/>
                             </svg>
                         </div>
-                        <h1 class='display-5 text-light pt-2 text-center'>Personal Website</h1>
-                        <p class="lead text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi rerum perspiciatis obcaecati nam vero reprehenderit ipsum illum ipsa impedit consectetur sequi quisquam provident nemo, explicabo incidunt adipisci voluptate facilis sapiente.
-
+                        <h1 class='display-5 text-light pt-2 text-center'>Portfolio Website</h1>
+                        <p class="lead text-light text-center">
+                            This website is implemented using HTML, CSS, Javascript, while also using Bootstraps CSS Framework and Express Js Library. It's currently deployed on Heroku 24/7 and is available at the following link:
+                            <a href="https://caelebkoharjo.herokuapp.com" class='text-light font-weight-bold'>caelebkoharjo.herokuapp.com</a>
                         </p>
                     </div>
                 </div>
