updated all the links & added new projects page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
                         </div>
                         <h1 class='display-5 text-light pt-2 text-center'>Polynomial Calculator</h1>
                         <p class="lead text-light text-center">
-                            This calculator is implemented using Java and JPanel for the user interface. It uses various data structures and algorithms to manipulate polynomials using calculus, while also following many software design principles.
+                            This calculator is implemented using Java and JPanel for the user interface. It uses various data structures and algorithms to manipulate polynomials using calculus, while following many software design principles.
                         </p>
                     </div>
                 </div>
