--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -79,21 +79,21 @@
                         <p class="card-text"> Check out the other pages if you haven't visited already! </p>
                     </div>
                     <div class="list-group list-group-flush">
-                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "mailto: caelebkoharjo@gmail.com">
+                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "/about">
                             <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-person-circle" viewBox="0 0 16 16">
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                             </svg>
                             About Me
                         </a>
-                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "https://github.com/caelebk">
+                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href = "/projects">
                             <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="svg-card bi bi-file-earmark-person" viewBox="0 0 16 16">
                                 <path d="M11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                                 <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2v9.255S12 12 8 12s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h5.5v2z"/>
                             </svg>
                             Personal Projects
                         </a>
-                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href="https://www.linkedin.com/in/caeleb-koharjo-709174190/">
+                        <a class="list-group-item list-group-item-action text-center bg-dark text-light white-border" href="/contact">
                             <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"class="svg-card bi bi-person-lines-fill" viewBox="0 0 16 16">
                                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
                             </svg>
