--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-            <a class="nav-link mr-4" href="/about">About me</a>
+                <a class="nav-link mr-4" href="/about">About me</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link mr-4" href="#">Personal Projects</a>
+                <a class="nav-link mr-4" href="/projects">Personal Projects</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link mr-4" href="#">Contact Information</a>
+                <a class="nav-link mr-4" href="/contact">Contact Information</a>
             </li>
             <li>
                 <div class="container-fluid pl-0">
