Made sure paragraph object went onto the next line

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,6 +107,8 @@
                         <h1 class='display-5 text-light pt-2 text-center'>Portfolio Website</h1>
                         <p class="lead text-light text-center">
                             This website is implemented using HTML, CSS, Javascript, while also using Bootstraps CSS Framework and Express Js Library. It's currently deployed on Heroku 24/7 and is available at the following link:
+                        </p>
+                        <p class="lead text-light text-center">
                             <a href="https://caelebkoharjo.herokuapp.com" class='text-light font-weight-bold'>caelebkoharjo.herokuapp.com</a>
                         </p>
                     </div>
