Fixed Typo and Links

--- a/views/WIP.ejs
+++ b/views/WIP.ejs
@@ -4,7 +4,7 @@
 <body>
     <div class="container-fluid bg-dark" style='height:50em'>
         <h1 class="display-1 text-warning text-center pt-5">Work in Progress!</h1>
-        <p class='lead text-center text-light mt-5'> This page is currently available! I'm working as hard as I can to get them done though, so be sure to come visit again soon!</p>
+        <p class='lead text-center text-light mt-5'> This page is currently unavailable! I'm working as hard as I can to get them done though, so be sure to come visit again soon!</p>
     </div>
 </body>
 </html>
