--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,10 +19,7 @@
                     </h1>
                     <h1 class="ml-2 display-4 ">an aspiring sofware engineer.</h1>
                     <hr class='bg-light'>
-                    <p class='lead ml-2 mt-3'> Caeleb Koharjo is a junior (3rd year) undergraduate student at The University of British Columbia, studying Computer Science. 
-                        As for his interests, he's loved computers ever since he laid hands on one. This passion eventually led him to pursue a career in Software Engineering/Development. 
-                        Currently, Caeleb is looking to kickstart his career in Software Engineering by finding his first internship. 
-                        He's motivated, determined, and thrilled to begin his journey in the software industry and hopes to progress his professional career.
+                    <p class='lead ml-2 mt-3'> 
                     </p>
                 </div>
                 <div class="col-6 mt-5">
